# singravault

./: .editorconfig  .gitattributes  .gitignore  .npmrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  RELEASE-NOTES-0.6.0.md  audit.toml  commit_message.txt  diff-stat.txt  env.example  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  security-crypto-architecture-review.skill  tailwind.config.ts  temp_pdf_extract.txt  vercel.json  vite.config.ts  vitest.config.ts  vitest.out
.github/workflows/: ci.yml  release-desktop.yml  security.yml
docs/: 2026-03-05-non-vault-access-step-up-reauth.md  ARCHITECTURE.md  AUTH_COMPONENTS.md  AUTH_CONTEXT.md  CRYPTO_SERVICE.md  DEVICE_KEY.md  EMERGENCY_ACCESS.md  OFFLINE_VAULT_SERVICE.md  OPAQUE_PROTOCOL.md  PASSKEY_HARDENING_FIXES.md  PASSWORD_STRENGTH_SERVICE.md  PHASE9_REVIEW.md  ROLLBACK_PLAN.md  SECURITY.md  SECURITY_HARDENING_PLAN.md  SECURITY_PHASE12.md  SUPPORT_SYSTEM.md  TESTPLAN.md  account-vault-settings-split.md  admin-permission-audit-2026-03-08.md  auth-session-otp-fix.md  crypto-hardening-2026-02-25.md  desktop-release-process.md  iframe-auth-fallback.md  premium-file-upload-e2ee.md  premium-loading.md  premium-service-boundary-2026-03.md  security-audit-2026-02-26.md  security-fixes-2026-02-26.md  security-standard-v1.md  session-and-browser-boundaries-2026-04-27.md  stripe-edge-function-import-fix.md  subscription-access-security-audit-2026-02-19.md  subscriptions.md  vault-item-dialog-create-type-restrictions-2026-03.md  xss-same-origin-hardening-2026-04-28.md  zero-knowledge-verification-and-comparison.md
docs/adr/: 0003-vault-integrity-quarantine-v2.md  0004-vault-operation-log-and-record-integrity.md  ADR-002-local-secret-store.md
docs/agent-rules/: architecture.md  dependencies.md  examples.md  security.md  testing-runtime.md
docs/archive/: 2026-02-19-supabase-jwt-rls-hardening.md  2026-03-05-subscription-emails.md  ADMIN_TEAM_ACCESS.md  AUTHENTICATOR_AND_SHARED_COLLECTIONS_FIX.md  (+29 more)
loadtest/: README.md
public/: manifest.webmanifest  offline.html
scripts/: RELEASE-NOTES-0.6.1.md  check-release-artifacts.mjs  check-repo-secret-guardrails.mjs  fix-0.6.0-release-body.md  generate-icons.cjs  install-with-optional-premium.mjs  run-with-premium-disabled.mjs  stage-premium-source.mjs  validate-official-desktop-config.mjs  vercel-install.mjs  vercel-install.sh
security-sim/: run-all.ts
src/: App.tsx  index.css  main.tsx  sw.ts  vite-env.d.ts
src-tauri/: Cargo.toml  singra-vault-export-2026-04-22.json  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/: installer-license.txt
supabase/: config.toml
(+652 files in other folders)
