[package]
name = "singra-vault"
version = "0.4.3"
description = "Singra Vault desktop application"
authors = ["Maunting Studios"]
license = "BUSL-1.1"
repository = "https://github.com/einmalmaik/singravault"
edition = "2021"

[lib]
name = "singra_vault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
getrandom = "0.2"
hkdf = "0.12"
keyring = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Security_Cryptography",
  "Win32_System_Memory",
] }
